# techx_R2_algorithm

./: .gitignore  README.md
chassis_maps/Relocation Map/: layers.npz  meta.yaml  octomap_msg.npz
chassis_maps/map_20260514_200359/: layers.npz  meta.yaml  octomap_msg.npz
src/jie_3d_nav/: .gitignore  README.en.md  README.md  install_deps_humble.sh
src/jie_3d_nav/jie_map_msgs/: CMakeLists.txt  package.xml
src/jie_3d_nav/jie_map_msgs/srv/: ExportNavigationSnapshot.srv  GetNavigationMapMeta.srv  LoadNavigationMapPackage.srv  SaveNavigationMapPackage.srv
src/jie_3d_nav/jie_octomap/: CMakeLists.txt  package.xml
src/jie_3d_nav/jie_octomap/config/: loc_control_command.yaml  slam_control_command.yaml
src/jie_3d_nav/jie_octomap/jie_octomap/: map_package_manager.py  map_save_gui.py  map_viewer_gui.py  pcd_map_import_gui.py  ros_map_import_gui.py
src/jie_3d_nav/jie_octomap/launch/: import_gazebo_world.launch.py  import_pcd_map.launch.py  import_ros_map.launch.py  map_manager.launch.py  octomap_open3d.launch.py  octomap_test.launch.py  odin1_loc.launch.py  odin1_slam.launch.py  web_octomap.launch.py
src/jie_3d_nav/jie_octomap/rviz/: octomap_test.rviz  odin1_loc.rviz
src/jie_3d_nav/jie_octomap/scripts/: map_package_manager  map_save_gui  map_viewer_gui  no_cache_http_server.py  open3d_octomap_viewer.py  pcd_file_publisher.py  pcd_map_import_gui  ros_map_import_gui  save_bin_map_gui.py  web_click_selector.py  world_file_picker_gui.py  world_selector_gui.py
src/jie_3d_nav/jie_octomap/src/: occupancy_grid_to_octomap_node.cpp  octomap_open3d_viewer_node.cpp  octomap_test.cpp  octomap_to_cloud_node.cpp  octomap_to_occupied_markers_node.cpp  pcd_to_octomap_node.cpp  rviz_click_selector_node.cpp  world_to_octomap_node.cpp
src/jie_3d_nav/jie_octomap/web/: index.html  main.js  styles.css
src/jie_3d_nav/jie_octomap/worlds/: 2_storey.world  field.world
src/jie_3d_nav/octo_planner/: CMakeLists.txt  package.xml
src/jie_3d_nav/octo_planner/config/: nav_params.yaml  nav_params_home.yaml
src/jie_3d_nav/octo_planner/launch/: nav.launch.py  web_test.launch.py
src/jie_3d_nav/octo_planner/src/: d1_controller.cpp  jie_path_node.cpp  test_map_to_odom_tf_node.cpp
src/odin_ros_driver/: README.md  RELOCALIZATION_GUIDE.md
src/odin_ros_driver/config/: control_command.yaml
src/odin_ros_driver/include/: host_sdk_sample.h
src/odin_ros_driver/src/: host_sdk_sample.cpp
src/r2_nav_action_server/: package.xml  setup.cfg  setup.py
src/r2_nav_action_server/r2_nav_action_server/: r2_nav_action_server_node.py
src/r2_nav_bringup/: package.xml  setup.cfg  setup.py
src/r2_nav_bringup/config/: r2_nav_goals.yaml  r2_nav_params.yaml
src/r2_nav_bringup/launch/: r2_odin_web_nav.launch.py  r2_web_serial_control.launch.py
src/r2_nav_interfaces/: CMakeLists.txt  package.xml
src/r2_nav_interfaces/action/: NavigateToPose.action
src/serial_communication_pkg/: package.xml  setup.py
src/serial_communication_pkg/config/: serial_params.yaml
src/serial_communication_pkg/launch/: cmd_vel_to_serial.launch.py
src/serial_communication_pkg/serial_communication_pkg/: cmd_vel_to_serial_node.py
